# event_trigger

./: .gitignore  LICENSE  README.md  pyproject.toml
src/event_trigger/: config.py  event.py  event_trigger.py  notifier.py  scheduler.py
src/event_trigger/typing/: enum.py
src/hair_trigger/: __init__.py  config.py  event.py  scheduler.py  threader.py
src/hair_trigger/typing/: __init__.py  scheduler.py
tests/: test_config.py  test_event.py
