[build-system]
requires = [ "setuptools>=41", "wheel", ]
build-backend = "setuptools.build_meta"

[project]
name = "event_trigger"
version = "0.1.0"
authors = [
    { name="BetterBuiltFool", email="betterbuiltfool@gmail.com"}
]
description = "Custom-made, per-instance events."
readme = "README.md"
requires-python = ">=3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed"
]