[build-system]
requires = [ "setuptools>=41", "wheel", ]
build-backend = "setuptools.build_meta"

[project]
name = "hair_trigger"
version = "0.2.0"
authors = [
    { name="BetterBuiltFool", email="betterbuiltfool@gmail.com"}
]
description = "Simple, Subscribable, Custom Events."
readme = "README.md"
requires-python = ">=3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/BetterBuiltFool/hair_trigger"
Issues = "https://github.com/BetterBuiltFool/hair_trigger/issues"